Fixed text and image alignment

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -309,8 +309,11 @@ body {
   max-width: 100%;
 }
 
-#case-study-content > div:not(h1) {
+#case-study-content > div {
   padding: 4rem 1rem;
+}
+
+#case-study-content p {
   text-align: justify;
 }
 
